[gd_scene load_steps=2 format=2]

[ext_resource path="res://effect/rays.gd" type="Script" id=1]

[node name="dicerays" type="Position2D"]
script = ExtResource( 1 )

[node name="Line1" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
z_index = 2
width = 3.0
default_color = Color( 1, 0.72549, 0, 1 )

[node name="Line2" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
z_index = 2
width = 3.0
default_color = Color( 1, 0.72549, 0, 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
